--- a/src/app.html
+++ b/src/app.html
@@ -9,7 +9,7 @@
 		<meta name="robots" content="index, follow" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<link rel="manifest" href="%sveltekit.assets%/manifest.json" />
-		<title>TRI-S HRIS</title>
+		<title>ELITES Workspace</title>
 
 		<!-- GOOGLE FONTS -->
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
