--- a/src/app.html
+++ b/src/app.html
@@ -21,7 +21,7 @@
 
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover">
+	<body class="duration-400 pointer-events-none blur-lg transition-[filter]" data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
